--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -15,16 +15,16 @@
   },
 "testimonials": {
   "header": "Czekamy na wasze opinie!",
-  "opinion1": "Pizza była przepyszna! Na imprezie serwowali nam 50 kawałków i wyszło znakomicie, polecamy!",
-  "opinion2": "Wszystko idealnie! Obsługa na najwyższym poziomie, a pizza była prawdziwą atrakcją wieczoru. Polecam z całego serca!",
-  "opinion3": "Obsługa była bardzo miła, a jedzenie fantastyczne! Wrócimy na pewno!",
-  "opinion4": "Na moich 18-stych pizza rozjechała imprezę! Wszyscy zachwyceni smakiem i szybkością podania.",
-  "opinion5": "Wesele z pizzą neapolitańską? Tak! Goście do dziś wspominają ten smak.",
-  "opinion6": "3 różne rodzaje pizzy na kawalerskim i wszystko znikało w mgnieniu oka. Najlepszy catering ever!",
-  "opinion7": "Pizza na imprezie firmowej - strzał w 10! Zamówiliśmy 80 porcji i każdy był zachwycony. Profesjonalna obsługa i pyszne jedzenie.",
-  "opinion8": "Mój syn wymarzył sobie pizzę na 18-stkę. Dzięki Wam miał najlepszą imprezę w klasie!",
-  "opinion9": "90 sekund i świeża pizza gotowa. Na weselu podawaliście non-stop - goście wniebowzięci!",
-  "opinion10": "Zamówiliśmy 6 rodzajów pizzy na garden party. Efekt? 100% zadowolonych gości i puste pudełka!"
+  "opinion1": "Pizza była rewelacyjna! Świeża, chrupiąca, podana błyskawicznie – goście na weselu byli zachwyceni!",
+  "opinion2": "Totalny hit wieczoru! Na kawalerskim zniknęło wszystko w kilka minut. Smak nie do podrobienia!",
+  "opinion3": "Fantastyczna obsługa i jeszcze lepsza pizza. Komunia syna na pewno zostanie zapamiętana!",
+  "opinion4": "Impreza urodzinowa na pełnym luzie – a pizza? Sztos! Wszyscy pytali, skąd zamawialiśmy.",
+  "opinion5": "Nie wiedziałem, że pizza może zrobić taką robotę na weselu! Goście byli zachwyceni.",
+  "opinion6": "Na wieczorze panieńskim to był strzał w dziesiątkę! Każdy mógł spróbować czegoś innego, wszyscy najedzeni i szczęśliwi!",
+  "opinion7": "Zamówiliśmy pizzę na imprezę firmową – i to była najlepsza decyzja! Szybko, smacznie i bez stresu.",
+  "opinion8": "Pizza na 18-stkę mojego syna – najlepsza decyzja! Zero zostawionych kawałków, wszystko zjedzone do ostatniego okruszka.",
+  "opinion9": "Na naszym weselu pizza podawana była na bieżąco i to było mistrzostwo świata! Nikt nie wyszedł głodny!",
+  "opinion10": "Garden party z pizzą? Tak! Świeżo wypiekana, różnorodna – wszyscy zachwyceni!"
 },
   "email": {
     "header": "Pogadajmy!",
